Various fixes and improvements to exception handling, content providers, and directives

--- a/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
@@ -33,7 +33,7 @@
         <div class="navbar main-navbar">
             <div class="user-information">
                 <div id="user-information-name" class="user-information-name pull-right">
-                    {{context.user.displayName}}
+                    {{currentUser.displayName}}
                 </div>
             </div>
 
@@ -51,9 +51,9 @@
         <div class="main-footer navbar navbar-fixed-bottom">
             <div class="navbar-inner">
                 <ul>
-                        <li class="nav"></li>
-                        <li class="nav pull-right"><h1 style="font-weight: normal;margin-right:20px">Workflow</h1></li>
-                    </ul>
+                    <li class="nav pull-left institutional-logo"></li>
+                    <li class="nav pull-right"><h1 style="font-weight: normal;margin-right:20px">Workflow</h1></li>
+                </ul>
             </div>
         </div>
 
