Adding requeue command, angular dependencies

--- a/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
@@ -33,7 +33,7 @@
         <div class="navbar main-navbar">
             <div class="user-information">
                 <div id="user-information-name" class="user-information-name pull-right">
-                    {{piecework.context.user.displayName}}
+                    {{currentUser.displayName}}
                 </div>
             </div>
 
