Fixing bug with FormUtility, adding unit tests for FileUtility, FormUtility, and ContentUtility, and also for RemoteContentProvider

--- a/web/src/main/resources/META-INF/piecework/templates/Form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Form.template.html
@@ -4,17 +4,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
+        <title>Workflow</title>
         <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
         <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
         <link href="../static/css/layout.css" rel="stylesheet"/>
         <base href="../ui/form"/>
         <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
         <script src="../static/js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-sanitize.min.js"></script>
+        <script src="../static/js/vendor/angular.min.js"></script>
+        <script src="../static/js/vendor/angular-resource.min.js"></script>
+        <script src="../static/js/vendor/angular-route.min.js"></script>
+        <script src="../static/js/vendor/angular-sanitize.min.js"></script>
         <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
         <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
         <script src="../static/js/vendor/jquery.inputmask.js"></script>
@@ -45,7 +45,7 @@
         <div class="main-footer navbar navbar-fixed-bottom">
             <div class="navbar-inner">
                 <ul>
-                    <li class="nav"></li>
+                    <li class="nav pull-left institutional-logo"></li>
                     <li class="nav pull-right"><h1 style="font-weight: normal">Workflow&nbsp;&nbsp;</h1></li>
                 </ul>
             </div>
