--- a/web/src/main/resources/META-INF/piecework/templates/Explanation.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Explanation.template.html
@@ -10,7 +10,7 @@
     <link href="../static/css/layout.css" rel="stylesheet"/>
     <base href=""/>
     <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
+    <script src="../static/js/vendor/angular.min.js"></script>
     <script src="../static/ng/js/explanation.js"></script>
 </head>
 </head>
