--- a/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
@@ -4,17 +4,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
+        <title>Workflow</title>
         <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
         <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
         <link href="../static/css/layout.css" rel="stylesheet"/>
         <base href="../ui/form.html"/>
         <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
         <script src="../static/js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-sanitize.min.js"></script>
+        <script src="../static/js/vendor/angular.min.js"></script>
+        <script src="../static/js/vendor/angular-resource.min.js"></script>
+        <script src="../static/js/vendor/angular-route.min.js"></script>
+        <script src="../static/js/vendor/angular-sanitize.min.js"></script>
         <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
         <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
         <script src="../static/js/vendor/jquery.inputmask.js"></script>
@@ -41,9 +41,9 @@
         </div>
         <div class="container">
             <div class="main-content row">
-                <div data-ng-if="notification" class="alert alert-danger">
-                    <strong>{{notification.title}}</strong> {{notification.message}}
-                </div>
+                <!--<div data-ng-if="notification" class="alert alert-danger">-->
+                    <!--<strong>{{notification.title}}</strong> {{notification.message}}-->
+                <!--</div>-->
                 <div data-wf-searchresults></div>
             </div>
         </div>
