Slight adjustments to look and feel

--- a/web/src/main/resources/META-INF/piecework/templates/Form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Form.template.html
@@ -46,7 +46,7 @@
             <div class="navbar-inner">
                 <ul>
                     <li class="nav pull-left institutional-logo"></li>
-                    <li class="nav pull-right"><h1 style="font-weight: normal">Workflow&nbsp;&nbsp;</h1></li>
+                    <li class="nav pull-right"><h1 style="font-weight: normal;margin-top:15px;margin-right:20px">Workflow&nbsp;&nbsp;</h1></li>
                 </ul>
             </div>
         </div>
