--- a/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
@@ -41,9 +41,6 @@
         </div>
         <div class="container">
             <div class="main-content row">
-                <!--<div data-ng-if="notification" class="alert alert-danger">-->
-                    <!--<strong>{{notification.title}}</strong> {{notification.message}}-->
-                <!--</div>-->
                 <div data-wf-searchresults></div>
             </div>
         </div>
@@ -52,7 +49,7 @@
             <div class="navbar-inner">
                 <ul>
                     <li class="nav pull-left institutional-logo"></li>
-                    <li class="nav pull-right"><h1 style="font-weight: normal;margin-right:20px">Workflow</h1></li>
+                    <li class="nav pull-right"><h1 style="font-weight: normal;margin-top:15px;margin-right:20px">Workflow&nbsp;&nbsp;</h1></li>
                 </ul>
             </div>
         </div>
