--- a/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
@@ -27,7 +27,7 @@
         <script src="../static/js/wf-services.js"></script>
         <script src="../static/js/wf-templates.js"></script>
         <script src="../static/js/wf-directives.js"></script>
-        <script src="../static/js/wf-controllers.js"></script>
+        <script src="../static/js/wf-search.js"></script>
     </head>
     <body role="application">
         <div class="navbar main-navbar">
