--- a/web/src/main/resources/META-INF/piecework/templates/Explanation.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Explanation.template.html
@@ -1,45 +1,44 @@
 <!doctype html>
 <html data-ng-app="Explanation">
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=8" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
-    <link href="../static/css/layout.css" rel="stylesheet"/>
-    <base href=""/>
-    <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
-    <script src="../static/js/vendor/angular.min.js"></script>
-    <script src="../static/ng/js/explanation.js"></script>
-</head>
-</head>
-<body data-wf-explanation role="application">
-    <div class="navbar main-navbar">
-        <div class="user-information">
-            <div id="user-information-name" class="user-information-name pull-right">
+    <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title></title>
+        <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
+        <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
+        <link href="../static/css/layout.css" rel="stylesheet"/>
+        <base href=""/>
+        <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
+        <script src="../static/js/vendor/angular.min.js"></script>
+        <script src="../static/ng/js/explanation.js"></script>
+    </head>
+    <body data-wf-explanation role="application">
+        <div class="navbar main-navbar">
+            <div class="user-information">
+                <div id="user-information-name" class="user-information-name pull-right">
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <h1><i class="fa fa-exclamation-triangle fa-3"></i> <span data-wf-message></span></h1>
+                </div>
             </div>
         </div>
         <div class="container">
-            <div class="row">
-                <h1><i class="fa fa-exclamation-triangle fa-3"></i> <span data-wf-message></span></h1>
-            </div>
+            <div class="main-content row">
+                <div class="text-danger">
+                    <h3 data-wf-message-detail></h3></div>
+                </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="main-content row">
-            <div class="text-danger">
-                <h3 data-wf-message-detail></h3></div>
-            </div>
-    </div>
 
-    <div class="main-footer navbar navbar-fixed-bottom">
-        <div class="navbar-inner">
-            <ul>
-                <li class="nav pull-left institutional-logo"></li>
-                <li class="nav pull-right"><h1 style="font-weight: normal">Workflow&nbsp;&nbsp;</h1></li>
-            </ul>
+        <div class="main-footer navbar navbar-fixed-bottom">
+            <div class="navbar-inner">
+                <ul>
+                    <li class="nav pull-left institutional-logo"></li>
+                    <li class="nav pull-right"><h1 style="font-weight: normal">Workflow&nbsp;&nbsp;</h1></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
