--- a/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="ProcessDesigner">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
@@ -11,9 +11,10 @@
     <base href="../ui/designer"/>
     <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
     <script src="../static/js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-resource.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-sanitize.min.js"></script>
+    <script src="../static/js/vendor/angular.min.js"></script>
+    <script src="../static/js/vendor/angular-resource.min.js"></script>
+    <script src="../static/js/vendor/angular-route.min.js"></script>
+    <script src="../static/js/vendor/angular-sanitize.min.js"></script>
     <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
     <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
     <script src="../static/js/vendor/ui-sortable.js"></script>
