--- a/web/src/main/resources/META-INF/piecework/templates/Report.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Report.template.html
@@ -10,10 +10,10 @@
     <link href="../static/css/layout.css" rel="stylesheet"/>
     <base href="../ui/report.html"/>
     <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular-resource.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular-route.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular-sanitize.min.js"></script>
+    <script src="../static/js/vendor/angular.min.js"></script>
+    <script src="../static/js/vendor/angular-resource.min.js"></script>
+    <script src="../static/js/vendor/angular-route.min.js"></script>
+    <script src="../static/js/vendor/angular-sanitize.min.js"></script>
     <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
     <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
     <script src="../static/js/vendor/d3.js"></script>
