--- a/web/src/main/webapp/static/css/layout.css
+++ b/web/src/main/webapp/static/css/layout.css
@@ -639,3 +639,7 @@ select.form-control {
 .user-information name .caret {
     border-top: 4px solid #ffffff;
 }
+
+.wf-delete-item {
+    cursor: pointer;
+}
