--- a/web/src/main/resources/META-INF/piecework/templates/Form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Form.template.html
@@ -15,6 +15,7 @@
         <script src="../static/js/vendor/angular-resource.min.js"></script>
         <script src="../static/js/vendor/angular-route.min.js"></script>
         <script src="../static/js/vendor/angular-sanitize.min.js"></script>
+        <script src="../static/js/vendor/angular-local-storage.js"></script>
         <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
         <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
         <script src="../static/js/vendor/jquery.inputmask.js"></script>
