--- a/web/src/main/resources/META-INF/piecework/templates/SearchResponse.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResponse.template.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workflow</title>
-    <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../static/css/vendor/bootstrap-3.1.1.min.css" rel="stylesheet"/>
     <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="../static/css/layout.css" rel="stylesheet"/>
     <base href="../ui/form.html"/>
