--- a/web/src/main/webapp/static/css/layout.css
+++ b/web/src/main/webapp/static/css/layout.css
@@ -666,6 +666,10 @@ select.form-control {
     *display: inline;
 }
 
+.wf-datepicker-group {
+    width: 185px;
+}
+
 .wf-delete-item {
     cursor: pointer;
 }
