Fixes to wfActive

--- a/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../static/css/vendor/bootstrap-3.1.1.min.css" rel="stylesheet"/>
     <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="../static/css/layout.css" rel="stylesheet"/>
     <base href="../ui/designer"/>
@@ -15,8 +15,9 @@
     <script src="../static/js/vendor/angular-resource.min.js"></script>
     <script src="../static/js/vendor/angular-route.min.js"></script>
     <script src="../static/js/vendor/angular-sanitize.min.js"></script>
-    <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
-    <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
+    <script src="../static/js/vendor/angular-local-storage.js"></script>
+    <script src="../static/js/vendor/ui-bootstrap-0.10.0.min.js"></script>
+    <script src="../static/js/vendor/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <script src="../static/js/vendor/ui-sortable.js"></script>
     <script src="../static/js/vendor/jquery.iframe-transport.js"></script>
     <script src="../static/js/vendor/jquery.fileupload.js"></script>
