Adjusting to show files in cancelled workflows as deleted

--- a/web/src/main/resources/META-INF/piecework/templates/Form.anonymous.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Form.anonymous.template.html
@@ -20,7 +20,8 @@
         <!--<script src="../static/js/vendor/angular-route.min.js"></script>-->
         <!--<script src="../static/js/vendor/angular-sanitize.min.js"></script>-->
 
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.js"></script>
+        <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.js"></script>-->
+        <script src="../static/js/vendor/angularjs-1.2.15/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-resource.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-sanitize.min.js"></script>
