--- a/web/src/main/resources/META-INF/piecework/templates/Form.anonymous.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Form.anonymous.template.html
@@ -6,29 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Workflow</title>
         <link href="../static/css/vendor/bootstrap-3.1.1.min.css" rel="stylesheet"/>
-        <!--<link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>-->
         <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
         <link href="../static/css/layout.css" rel="stylesheet"/>
         <base href="../ui/form"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-        <!--<script src="../static/js/vendor/jquery-1.10.2.min.js"></script>-->
-        <!--<script src="../static/js/vendor/jquery-ui-1.10.3.custom.min.js"></script>-->
-
-        <!--<script src="../static/js/vendor/angular.min.js"></script>-->
-        <!--<script src="../static/js/vendor/angular-resource.min.js"></script>-->
-        <!--<script src="../static/js/vendor/angular-route.min.js"></script>-->
-        <!--<script src="../static/js/vendor/angular-sanitize.min.js"></script>-->
-
-        <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.js"></script>-->
+        <script src="../static/js/vendor/jquery-1.11.0/jquery.min.js"></script>
+        <script src="../static/js/vendor/jqueryui-1.10.4/jquery-ui.min.js"></script>
         <script src="../static/js/vendor/angularjs-1.2.15/angular.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-resource.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-sanitize.min.js"></script>
+        <script src="../static/js/vendor/angularjs-1.2.15/angular-route.min.js"></script>
+        <script src="../static/js/vendor/angularjs-1.2.15/angular-sanitize.min.js"></script>
 
         <script src="../static/js/vendor/angular-local-storage.js"></script>
-        <!--<script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>-->
-        <!--<script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>-->
         <script src="../static/js/vendor/ui-bootstrap-0.10.0.min.js"></script>
         <script src="../static/js/vendor/ui-bootstrap-tpls-0.10.0.min.js"></script>
         <script src="../static/js/vendor/jquery.inputmask.js"></script>
@@ -46,9 +33,7 @@
     <body data-ng-controller="FormController" data-ng-cloak role="application">
         <div>
             <div class="user-information">
-                <div id="user-information-name" class="user-information-name pull-right">
-                    {{form.currentUser.displayName}}
-                </div>
+                <div id="user-information-name" class="user-information-name pull-right" data-ng-bind="form.currentUser.displayName"></div>
             </div>
             <div data-wf-toolbar></div>
         </div>
