--- a/web/src/main/resources/META-INF/piecework/templates/SearchResponse.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResponse.template.html
@@ -11,16 +11,9 @@
     <base href="../ui/form.html"/>
     <script src="../static/js/vendor/jquery-1.11.0/jquery.min.js"></script>
     <script src="../static/js/vendor/jqueryui-1.10.4/jquery-ui.min.js"></script>
-    <!--<script src="../static/js/vendor/jquery-1.10.2.min.js"></script>-->
-    <!--<script src="../static/js/vendor/jquery-ui-1.10.3.custom.min.js"></script>-->
     <script src="../static/js/vendor/angularjs-1.2.15/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-resource.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-sanitize.min.js"></script>
-    <!--<script src="../static/js/vendor/angular.min.js"></script>-->
-    <!--<script src="../static/js/vendor/angular-resource.min.js"></script>-->
-    <!--<script src="../static/js/vendor/angular-route.min.js"></script>-->
-    <!--<script src="../static/js/vendor/angular-sanitize.min.js"></script>-->
+    <script src="../static/js/vendor/angularjs-1.2.15/angular-route.min.js"></script>
+    <script src="../static/js/vendor/angularjs-1.2.15/angular-sanitize.min.js"></script>
     <script src="../static/js/vendor/angular-local-storage.js"></script>
     <script src="../static/js/vendor/ui-bootstrap-0.10.0.min.js"></script>
     <script src="../static/js/vendor/ui-bootstrap-tpls-0.10.0.min.js"></script>
