--- a/web/src/main/resources/META-INF/piecework/templates/SearchResponse.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResponse.template.html
@@ -12,6 +12,7 @@
     <script src="../static/js/vendor/jquery-1.11.0/jquery.min.js"></script>
     <script src="../static/js/vendor/jqueryui-1.10.4/jquery-ui.min.js"></script>
     <script src="../static/js/vendor/angularjs-1.2.15/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-resource.min.js"></script>
     <script src="../static/js/vendor/angularjs-1.2.15/angular-route.min.js"></script>
     <script src="../static/js/vendor/angularjs-1.2.15/angular-sanitize.min.js"></script>
     <script src="../static/js/vendor/angular-local-storage.js"></script>
