--- a/web/src/main/resources/META-INF/piecework/templates/SearchResponse.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResponse.template.html
@@ -13,7 +13,7 @@
     <script src="../static/js/vendor/jquery-1.11.0/jquery.min.js"></script>
     <script src="../static/js/vendor/jqueryui-1.10.4/jquery-ui.min.js"></script>
     <script src="../static/js/vendor/angularjs-1.2.15/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-resource.min.js"></script>
+    <script src="../static/js/vendor/angularjs-1.2.15/angular-resource.min.js"></script>
     <script src="../static/js/vendor/angularjs-1.2.15/angular-route.min.js"></script>
     <script src="../static/js/vendor/angularjs-1.2.15/angular-sanitize.min.js"></script>
     <script src="../static/js/vendor/angular-local-storage.js"></script>
@@ -28,11 +28,6 @@
     <script src="../static/js/vendor/jquery-file-upload-9.5.7/jquery.fileupload-validate.js"></script>
     <script src="../static/js/vendor/jquery-file-upload-9.5.7/jquery.fileupload-angular.js"></script>
 
-    <!--<script src="../static/js/vendor/jquery.iframe-transport.js"></script>-->
-    <!--<script src="../static/js/vendor/jquery.fileupload.js"></script>-->
-    <!--<script src="../static/js/vendor/jquery.fileupload-process.js"></script>-->
-    <!--<script src="../static/js/vendor/jquery.fileupload-validate.js"></script>-->
-    <!--<script src="../static/js/vendor/jquery.fileupload-angular.js"></script>-->
     <script src="../static/js/wf-services.js"></script>
     <script src="../static/js/wf-templates.js"></script>
     <script src="../static/js/wf-directives.js"></script>
