--- a/web/src/main/webapp/static/css/layout.css
+++ b/web/src/main/webapp/static/css/layout.css
@@ -689,9 +689,18 @@ select.form-control {
     margin-top: 8px;
 }
 
+.wf-search-header {
+    margin-top: 15px;
+}
+
 .wf-state-cancelled a.wf-file-link {
     color:red;
     text-decoration:line-through;
+}
+
+.wf-task-count {
+    line-height: 34px;
+    margin-top: 7px;
 }
 
 .dropdown > ul.scroll{
