Fix to bug that could incorrectly validate fields as empty when not submitted on a save or attach

--- a/web/src/main/resources/META-INF/piecework/templates/Form.anonymous.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Form.anonymous.template.html
@@ -38,7 +38,7 @@
             <div data-wf-toolbar></div>
         </div>
 
-        <form data-wf-form="" name="myForm" action="/" method="POST" novalidate="novalidate">
+        <form data-wf-form data-form="form" name="myForm" action="/" method="POST" novalidate="novalidate">
             <div data-wf-page></div>
         </form>
     </body>
